# uni-public

./: Cargo.toml  README.md
src/: backup.rs  ga.rs  main.rs  update.rs
src/antzed/: build.rs  mod.rs  publish.rs  save.rs  write.rs
src/cmd/: install.rs  ls.rs  mod.rs
src/common/: mod.rs
src/env_command/: list_var.rs  mod.rs  set_var.rs
src/git/: link.rs  mod.rs  standard.rs
src/note/: db.rs  list.rs  mod.rs  write.rs
src/reading_list/: add.rs  db.rs  list.rs  mark_read.rs  mod.rs
