[package]
name = "uni"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
clap = {version="4.4.8", features = ["env"]}
crossterm = "0.27.0"
dirs = "5.0.1"
lazy_static = "1.4.0"
log = "0.4.20"
ratatui = "0.24.0"
regex = "1.10.2"
rusqlite = "0.30.0"
simple_logger = "4.3.0"
tokio =  { version ="1.35.0", features = ["full"] }
urlshortener = "3.0.2"
webbrowser = "0.8.12"
